# pruebaTB3

./: README.md
DynamixelSDK/dynamixel_sdk_examples/src/: read_write_node.cpp
turtlebot3_base/: CMakeLists.txt  package.xml  turtlebot3_hw.xml
turtlebot3_base/include/turtlebot3_base/: diffdrive_turtlebot3.h  motor_driver.h  motor_driver.hpp  wheel.h
turtlebot3_base/src/: CMakeLists.txt  diffdrive_turtlebot3.cpp  motor_driver.cpp  wheel.cpp
turtlebot3_bringup/launch/: turtlebot3_robot.launch.py  turtlebot_description.launch.py
turtlebot3_control/: CMakeLists.txt  package.xml
turtlebot3_control/config/: burger_controllers.yaml
turtlebot3_control/launch/: turtlebot3_control.launch.py
turtlebot3_description/urdf/: turtlebot3_burger.urdf.xacro
turtlebot3_description/urdf/control/: turtlebot3_burger_control.urdf.xacro
